tests/invalid/for_range_step_zero.wio
fn Entry() -> i32 {
    for i in 1...5 step 0 {
        return i;
    }

    return 0;
}
